[gd_scene load_steps=3 format=2]

[ext_resource path="res://ui/item_slot/item_slot.tscn" type="PackedScene" id=1]
[ext_resource path="res://tools/recipes/ingredient_entry.gd" type="Script" id=2]

[node name="ingredient_entry" type="HBoxContainer"]
margin_right = 110.0
margin_bottom = 48.0
script = ExtResource( 2 )

[node name="item_slot" parent="." instance=ExtResource( 1 )]
margin_right = 48.0
margin_bottom = 48.0

[node name="minus_button" type="Button" parent="."]
margin_left = 52.0
margin_top = 14.0
margin_right = 69.0
margin_bottom = 34.0
size_flags_horizontal = 4
size_flags_vertical = 4
text = "-"

[node name="plus_button" type="Button" parent="."]
margin_left = 73.0
margin_top = 14.0
margin_right = 93.0
margin_bottom = 34.0
size_flags_horizontal = 4
size_flags_vertical = 4
text = "+"
